--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <spring.version>4.3.10.RELEASE</spring.version>
-        <tws-api.version>9.72.17-SNAPSHOT</tws-api.version>
+        <tws-api.version>9.73.06</tws-api.version>
         <guava.version>23.0</guava.version>
         <junit.version>4.12</junit.version>
         <logback-classic.version>1.2.3</logback-classic.version>
