Now SWT will point to OS-specific jar based on the active profile.

--- a/pom.xml
+++ b/pom.xml
@@ -120,7 +120,7 @@
                     <artifactId>org.eclipse.swt.win32.win32.x86_64</artifactId>
                     <version>4.763</version>
                     <scope>system</scope>
-                    <systemPath>${basedir}/lib/swt.jar</systemPath>
+                    <systemPath>${basedir}/lib/swt_win.jar</systemPath>
                 </dependency>
             </dependencies>
         </profile>
@@ -137,7 +137,7 @@
                     <artifactId>org.eclipse.swt.cocoa.macosx.x86_64</artifactId>
                     <version>4.3</version>
                     <scope>system</scope>
-                    <systemPath>${basedir}/lib/swt.jar</systemPath>
+                    <systemPath>${basedir}/lib/swt_mac.jar</systemPath>
                 </dependency>
             </dependencies>
         </profile>
